--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,6 +70,7 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
+
 /* Basic */
 
 	@-ms-viewport {
@@ -2161,16 +2162,14 @@ input, select, textarea {
 			#nav > ul > li {
 				display: inline-block;
 				margin-left: 1em;
-				margin-top: 1em;
 			}
 
 				#nav > ul > li > ul {
 					display: none;
 				}
 
-				#nav > ul > li > span, #nav > ul > li > a {	
+				#nav > ul > li > span, #nav > ul > li > a {
 					color: #fff;
-					font-size: 1.2em;
 					text-decoration: none;
 					outline: 0;
 					border: 0;
@@ -2270,10 +2269,7 @@ input, select, textarea {
 
 		#hero h2 {
 			color: #fff;
-			font-size: 3.5em;
-			font-weight: 700;
-			text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-			letter-spacing: 2px;
+			font-size: 3em;
 		}
 
 		#hero strong {
@@ -2285,10 +2281,8 @@ input, select, textarea {
 		}
 
 		#hero p {
-			color: #2A3F54; /* 深蓝灰色，给文字一个庄重专业的感觉 */
 			font-size: 1.5em;
 			line-height: 1.5em;
-			text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.3); /* 添加白色文字阴影提高可读性 */
 		}
 
 		#hero .button {
@@ -2712,7 +2706,6 @@ input, select, textarea {
 			#logo {
 				position: relative;
 			}
-			
 
 				#logo a {
 					border: solid 1px rgba(255, 255, 255, 0.75);
@@ -2833,30 +2826,30 @@ input, select, textarea {
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
 				backface-visibility: hidden;
-				-moz-transform: translateY(-35vh);
-				-webkit-transform: translateY(-35vh);
-				-ms-transform: translateY(-35vh);
-				transform: translateY(-35vh);
+				-moz-transform: translateY(-50vh);
+				-webkit-transform: translateY(-50vh);
+				-ms-transform: translateY(-50vh);
+				transform: translateY(-50vh);
 				-moz-transition: -moz-transform 0.5s ease;
 				-webkit-transition: -webkit-transform 0.5s ease;
 				-ms-transition: -ms-transform 0.5s ease;
 				transition: transform 0.5s ease;
-				background-image: url("images/overlay.png"), url("images/navPanel.svg"), -moz-linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
-				background-image: url("images/overlay.png"), url("images/navPanel.svg"), -webkit-linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
-				background-image: url("images/overlay.png"), url("images/navPanel.svg"), -ms-linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
-				background-image: url("images/overlay.png"), url("images/navPanel.svg"), linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
+				background-image: url("images/overlay.png"), url("images/navPanel.svg"), -moz-linear-gradient(top, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.25));
+				background-image: url("images/overlay.png"), url("images/navPanel.svg"), -webkit-linear-gradient(top, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.25));
+				background-image: url("images/overlay.png"), url("images/navPanel.svg"), -ms-linear-gradient(top, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.25));
+				background-image: url("images/overlay.png"), url("images/navPanel.svg"), linear-gradient(top, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.25));
 				display: block;
 				left: 0;
 				overflow-y: auto;
 				position: fixed;
 				top: 0;
 				width: 100%;
-				height: 35vh;
+				height: 50vh;
 				z-index: 10002;
 				box-shadow: inset 0px -2px 5px 0px rgba(0, 0, 0, 0.25);
 				font-size: 1em;
-				background-color: #f08c89;
-				background-size: 128px 128px, 100% 100%, auto;
+				background-color: #45474a;
+				background-size: 128px 128px, 100% 100%, 100% 100%;
 			}
 
 				#navPanel .link {
@@ -2905,17 +2898,17 @@ input, select, textarea {
 				}
 
 			body.navPanel-visible #page-wrapper {
-				-moz-transform: translateY(35vh);
-				-webkit-transform: translateY(35vh);
-				-ms-transform: translateY(35vh);
-				transform: translateY(35vh);
+				-moz-transform: translateY(50vh);
+				-webkit-transform: translateY(50vh);
+				-ms-transform: translateY(50vh);
+				transform: translateY(50vh);
 			}
 
 			body.navPanel-visible #navButton {
-				-moz-transform: translateY(35vh);
-				-webkit-transform: translateY(35vh);
-				-ms-transform: translateY(35vh);
-				transform: translateY(35vh);
+				-moz-transform: translateY(50vh);
+				-webkit-transform: translateY(50vh);
+				-ms-transform: translateY(50vh);
+				transform: translateY(50vh);
 			}
 
 			body.navPanel-visible #navPanel {
